--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 logging.level.org.springframework=info
-spring.security.user.name=diego
-spring.security.user.password=123456
+#spring.security.user.name=diego
+#spring.security.user.password=123456
