--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 logging.level.org.springframework=info
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
- 
+spring.jpa.defer-datasource-initialization=true 
+
 spring.h2.console.enabled=true
 #spring.security.user.name=diego
 #spring.security.user.password=123456
